[gd_scene load_steps=11 format=2]

[ext_resource path="res://WindEnemy.gd" type="Script" id=1]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemigos/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemigos/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Shaders/Blink.shader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="Animation" id=2]
resource_name = "BlinkWindEnemy"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "StopBlinkWindEnemy"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="WindEnemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="WindEffect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WindEffect"]

[node name="WindEffectSprite" type="Sprite" parent="WindEffect"]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="WanderController" parent="." instance=ExtResource( 5 )]
wander_range = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 4

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/BlinkWindEnemy = SubResource( 2 )
anims/StopBlinkWindEnemy = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 5

[node name="TimerSonido" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_distance = 300.0
bus = "Sonido"
[connection signal="body_entered" from="WindEffect" to="." method="_on_WindEffect_body_entered"]
[connection signal="body_exited" from="WindEffect" to="." method="_on_WindEffect_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="TimerSonido" to="." method="_on_TimerSonido_timeout"]
